--- a/templates/stock_price.html
+++ b/templates/stock_price.html
@@ -54,13 +54,13 @@
         }
 
         .arrow-up-right:before {
-            content: '\2197;&#xFE0E';
+            content: '\2197';
             color: #90fd58;
             margin-left: 5px;
         }
 
         .arrow-down-right:before {
-            content: '\2198;&#xFE0E';
+            content: '\2198';
             color: #ff6767;
             margin-left: 5px;
         }
