--- a/templates/stock_price.html
+++ b/templates/stock_price.html
@@ -54,13 +54,11 @@
         }
 
         .arrow-up-right:before {
-            content: '\2197';
             color: #90fd58;
             margin-left: 5px;
         }
 
         .arrow-down-right:before {
-            content: '\2198';
             color: #ff6767;
             margin-left: 5px;
         }
@@ -72,9 +70,9 @@
     <h2>
         <span style="text-transform: uppercase;">{{ stock_symbol }}</span>&nbsp;
         {% if changePercent|float > 0.0 %}
-            <span class="arrow-up-right"></span>&#xFE0E;
+            <span class="arrow-up-right">&#11016;&#xFE0E</span>&#xFE0E;
         {% else %}
-            <span class="arrow-down-right"></span>&#xFE0E;
+            <span class="arrow-down-right">&#11018;&#xFE0E</span>&#xFE0E;
         {% endif %}
         &nbsp;
         <span style="color:gray;" id="last-updated"></span>
