--- a/templates/stock_price.html
+++ b/templates/stock_price.html
@@ -53,12 +53,12 @@
             background-color: #45a049;
         }
 
-        .arrow-up-right:before {
+        .arrow-up-right {
             color: #90fd58;
             margin-left: 5px;
         }
 
-        .arrow-down-right:before {
+        .arrow-down-right {
             color: #ff6767;
             margin-left: 5px;
         }
