--- a/templates/stock_price.html
+++ b/templates/stock_price.html
@@ -90,4 +90,5 @@
         <a class="button" href="/">Change Stock</a>
     </div>
 </body>
+    <script src="{{ url_for('static', filename='websocket.js') }}"></script>
 </html>
