--- a/templates/stock_price.html
+++ b/templates/stock_price.html
@@ -28,25 +28,21 @@
         h2 {
             color: #fff;
             display: inline;
-        } 
-
-        pre {
-            margin-bottom: -20px;
         }
 
         .button {
-           font-family: monospace;
-           background-color: blueviolet;
-           color: #fff; 
-           border-radius: 10%;
-           height: 20px;
-           margin-top: 30px;
-           margin-right: 10px;
-           padding: 10px 20px;
-           font-size: 18px;
-           align-content: center;
-           width: fit-content;
-           text-decoration: none;
+            font-family: monospace;
+            background-color: blueviolet;
+            color: #fff;
+            border-radius: 10%;
+            height: 20px;
+            margin-top: 30px;
+            margin-right: 10px;
+            padding: 10px 20px;
+            font-size: 18px;
+            align-content: center;
+            width: fit-content;
+            text-decoration: none;
         }
 
         .button:hover {
@@ -69,20 +65,24 @@
     <h1>Stock Price</h1>
     <h2>
         <span style="text-transform: uppercase;">{{ stock_symbol }}</span>&nbsp;
-        <span id="arrow"></span>&nbsp;
+        {% if changePercent|float > 0.0 %}
+            <span class="arrow-up-right">&#8599;&#xFE0E</span>
+        {% else %}
+            <span class="arrow-down-right">&#8600;&#xFE0E</span>
+        {% endif %}
+        &nbsp;
         <span style="color:gray;" id="last-updated"></span>
     </h2>
-    <script src="{{ url_for('static', filename='socket.io.js') }}"></script>
-    <script src="{{ url_for('static', filename='websocket.js') }}"></script>
     <pre><code class="rainbow-text">{{ ascii_price }}</code></pre>
-    <h2 id="price" class="change"></h2>
-    <h2 id="change" class="changePercent"></h2>
-    <h2 id="high"></h2>
-    <h2 id="low"></h2>
+    <h2 class="change">Change: {{ change }}&nbsp;</h2>
+    <h2 class="changePercent">Change Percent: <span style="color: {% if changePercent|float > 0.0 %}#90fd58{% else %}#ff6767{% endif %};">{{ changePercent }}&#37;</span>&nbsp;</h2>
+    <h2 class="high">High: <span style="color: #90fd58; font-size: 24px;">&#11014;&#xFE0E</span> {{ high }}&nbsp;</h2>
+    <h2 class="low">Low: <span style="color: #ff6767; font-size: 24px;">&#11015;&#xFE0E</span> {{ low }}&nbsp;</h2>
     <div style="display: block;">
         <h2>&nbsp;</h2>
         <br>
         <a class="button" href="/">Change Stock</a>
     </div>
+    <script src="{{ url_for('static', filename='websocket.js') }}"></script>
 </body>
 </html>
