--- a/templates/stock_price.html
+++ b/templates/stock_price.html
@@ -71,7 +71,7 @@
             <span class="arrow-down-right">&#8600;&#xFE0E</span>
         {% endif %}
         &nbsp;
-        <span style="color:gray;" id="last-updated"></span>
+        <span style="color:gray;" id="last-updated">{{ lastUpdated }}</span>
     </h2>
     <pre><code class="rainbow-text">{{ ascii_price }}</code></pre>
     <h2 class="change">{{ change }}&nbsp;</h2>
