--- a/templates/stock_price.html
+++ b/templates/stock_price.html
@@ -13,6 +13,7 @@
             -webkit-text-fill-color: transparent;
             animation: rainbow 4s linear infinite;
             letter-spacing: -1px;
+            margin-bottom: -20px;
         }
 
         @keyframes rainbow {
