--- a/templates/stock_price.html
+++ b/templates/stock_price.html
@@ -84,6 +84,7 @@
         <br>
         <a class="button" href="/">Change Stock</a>
     </div>
+    <script src="{{ url_for('static', filename='socket.io.js') }}"></script>
     <script src="{{ url_for('static', filename='websocket.js') }}"></script>
 </body>
 </html>
