--- a/templates/stock_price.html
+++ b/templates/stock_price.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>Stock Price</title>
-    <script src="{{ url_for('static', filename='socket.io.js') }}"></script>
-    <script src="{{ url_for('static', filename='websocket.js') }}"></script>
+    <script src="/static/socket.io.js"></script>
+    <script src="/static/websocket.js"></script>
     <style>
         body {
             background-color: #000;
