--- a/templates/stock_price.html
+++ b/templates/stock_price.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Stock Price</title>
-    <script src="/static/socket.io.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.3.1/socket.io.js"></script>
     <script src="/static/websocket.js"></script>
     <style>
         body {
